# temari-chan

./: .gitignore  README.md  pyproject.toml  test_requirements.txt
temari/: bot.py  keep_alive.py
tests/: conftest.py
